# django-minisentry

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
minisentry/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
minisentry/migrations/: 0001_initial.py
minisentry/templates/minisentry/: show.html
minisentry/templatetags/: minisentry_extra.py
