[metadata]
name = django-minisentry
version = 20230811
description = A Django app to collect sentry errors in local database, render in a simplified UI similar to Sentry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bartekbrak/django-minisentry
author = Bartek Brak
author_email = bartek@brak.dev
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 4.1
